Fix discovery test stubs after targeted Maven verification